public/stylesheets/style.css
body {
    margin: 0px;
    padding: 0px;
    background-image: url('/images/bg-body.png');
    background-repeat: repeat-x;
}

a:link {text-decoration:none;}
a:visited {text-decoration:none;}
a:hover {text-decoration:underline;}
a:active {text-decoration:underline;}

.container {
    width: 980px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 0px;
    padding: 0px;
}

#header {
    width: 980px;
}

#logo {
    float: left;
}

#nav {
    width: 680px;
    height: 20px;
    float: left;
    margin-left: auto;
    margin-right: auto;
    margin-top: 0px;
    padding: 10px;
}

#nav ul {
    margin: 0px;
    padding: 0px;
}

#nav li {
    display: inline;
    list-style-type: none;
    padding-right: 20px;
}

#nav a:link {
    font-size: 15px;
    font-weight: bold;
    color: rgb(51, 51, 51);
    font-family: Helvetica,arial,freesans;
    text-decoration: none;
}

#nav a:active {
    font-size: 15px;
    font-weight: bold;
    color: rgb(51, 51, 51);
    font-family: Helvetica,arial,freesans;
    text-decoration: none;
}

#nav a:visited {
    font-size: 15px;
    font-weight: bold;
    color: rgb(51, 51, 51);
    font-family: Helvetica,arial,freesans;
    text-decoration: none;
}

#nav a:hover {
    font-size: 15px;
    font-weight: bold;
    color: rgb(65, 131, 196);
    font-family: Helvetica,arial,freesans;
    text-decoration: none;
}

#controls {
    width: 200px;
    padding-top: 10px;
    float: left;
    text-align: right;
}

#controls a {
    font-size: 15px;
    font-weight: bold;
    color: rgb(51, 51, 51);
    font-family: Helvetica,arial,freesans;
    text-decoration: none;
}

#controls a:hover {
    font-size: 15px;
    font-weight: bold;
    color: rgb(65, 131, 196);
    font-family: Helvetica,arial,freesans;
    text-decoration: none;
}


#body {
    clear: both;
}

#menu {
    width: 980px;
}

#idea-new {
    width: 920px;
    padding-top: 30px;
    padding-bottom: 30px;
    padding-left: 30px;
    padding-right: 30px;
    border-top: 1px solid rgba(0, 0, 0, 0.1);
    box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.1);
}

.left-mini {
    width: 425px;
    padding: 10px;
    margin-right: 28px;
    float: left;
}

.right-mini {
    width: 385px;
    padding: 10px;
    padding-left: 40px;
    float: left;
    border-left: 2px dashed rgba(0, 0, 0, 0.1);
}

.center-mini {
    width: 820px;
    padding: 10px;
    clear: both;
}

#idea-desc {
    width: 900px;
    margin-left: auto;
    margin-right: auto;
}

#content {
    width: 900px;
    padding: 40px;
}

.ideas-bubble {
    background-color: rgb(248, 248, 248);
    border-color: rgb(216, 216, 216);
    border-width: medium 1px 1px;
    border-style: none solid solid;
    border-radius: 0px 0px 3px 3px;
}

#idea-table-header {
    width: 758px;
    height: 30px;
    background-color: #E6F1F6;
    border-color: rgb(216, 216, 216);
    border-width: medium 1px 1px;
    border-style: none solid solid;
}

#idea-table-header li {
    display: inline;
    list-style-type: none;
    padding-right: 20px;
}

.idea-title-text {
    width: 725px;
    height: 20px;
    padding-left: 5px;
    float: left;
}

.idea-title-fav {
    width: 20px;
    height: 20px;
    float: left;
    background-repeat: no-repeat;
    background-image: url('/images/fav.png');
}
.idea-title-fav:hover {
    background-color: red;
}
.idea-title-fav-selected {
    width: 20px;
    height: 20px;
    float: left;
    background-repeat: no-repeat;
    background-color: yellow;
    background-image: url('/images/fav.png');
}
.idea-title-fav-selected:hover {
    background-color: black;
}
.idea-footer {
    width: 738px;
    margin: 0px;
    padding-right: 10px;
    padding-left: 10px;
    color: rgb(51, 51, 51);
    font-size: 12px;
    font-family: Helvetica,arial,freesans;
    text-align: right;
}

#footer {
    width: 960px;
    height: 100px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 0px;
    margin-bottom: 0px;
    padding: 10px;
    clear: both;
    border-top:2px solid #e7e7e7;
}

#copyright {
    width: 440px;
    height: 100px;
    float: left;
    text-align: left;
}

#logo-footer {
    width: 80px;
    height: 100px;
    float: left;
    text-align: center;
}

#menu-footer {
    width: 440px;
    height: 100px;
    float: left;
    text-align: right;
}

#menu-footer li {
    display: inline;
    list-style-type: none;
    padding-right: 10px;
}

.idea {
    width: 760px;
    margin: 0px;
    border-color: rgb(216, 216, 216);
    border-top-width: 3px;
    border-top-style: double;
}
.idea-title {
    width: 750px;
    height: 25px;
    margin: 0px;
    padding-top: 5px;
    padding-left: 5px;
    padding-right: 5px;
    border-color: rgb(216, 216, 216);
    border-bottom-width: 1px;
    border-bottom-style: solid;
}
.idea-title a:link {
    font-size: 15px;
    font-weight: bold;
    color: rgb(51, 51, 51);
    font-family: Helvetica,arial,freesans;
    text-decoration: none;
}
.idea-title a:hover {
    font-size: 15px;
    font-weight: bold;
    color: rgb(65, 131, 196);
    font-family: Helvetica,arial,freesans;
    text-decoration: none;
}
.idea-content {
    width: 740px;
    height: 60px;
    margin: 0px;
    padding: 10px;
    color: rgb(51, 51, 51);
    font-size: 12px;
    font-family: Helvetica,arial,freesans;
}

.comment {
    width: 500px;
    padding: 10px;
    margin-right: 240px;
    vertical-align: middle;
    background-color: #E6F1F6;
}

.left {
    width: 760px;
    float: left;
}

.left-half {
    width: 300px;
    float: left;
}

.right {
    width: 140px;
    float: left;
}

.right-half {
    width: 300px;
    float: left;
}

.spacer {
    height: 20px;
    clear: both;
}

.announcement {
    width: 980px;
    height: 95px;
    padding-top: 5px;
    background-color: rgb(30, 104, 35);
    border-radius: 10px;
}

.announcement-inner {
    width: 964px;
    height: 65px;
    padding-top: 20px;
    margin-left: auto;
    margin-right: auto;
    color: #FFFFFF;
    font-size: 15px;
    text-align: center;
    font-family: Helvetica,arial,freesans;
    text-decoration: none;
    vertical-align: middle;
    border: 2px dashed #fff;
    border-radius: 10px;
}

.card {
    width: 920px;
    height: 190px;
    padding-top: 30px;
    padding-bottom: 30px;
    padding-left: 30px;
    padding-right: 30px;
    color: #000000;
    font-size: 15px;
    text-align: center;
    font-family: Helvetica,arial,freesans;
    border-top: 1px solid rgba(0, 0, 0, 0.1);
    box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.1);
}

.submenu {
    margin-left: 20px;
}

.submenu a {
    font-size: 15px;
    color: rgb(51, 51, 51);
    font-family: Helvetica,arial,freesans;
    text-decoration: none;
}

.submenu a:hover {
    font-size: 15px;
    color: rgb(65, 131, 196);
    font-family: Helvetica,arial,freesans;
    text-decoration: none;
}

.submenu-item {
    width: 100px;
    height: 25px;
    padding-left: 20px;
    padding-top: 15px;
    border-left: thin solid #000000;
    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.05);
}

.submenu-item-selected {
    width: 100px;
    height: 25px;
    padding-left: 20px;
    padding-top: 15px;
    border-right: 2px solid red;
    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.05);
}

.submenu-item:hover {
    width: 100px;
    height: 25px;
    padding-left: 20px;
    padding-top: 15px;
    box-shadow: 2px 0px 0px rgb(204, 204, 204) inset;
}

